...
  "saveSortFilterAudiosOptionsToPlaylistMenu": "Save Sort/Filter Parameters to Playlist ...",
  "sortFilterDialogTitle": "Sort and Filter Parms",
  "sortBy": "Sort by:",
  "audioDownloadDate": "Audio downl date",
  "videoUploadDate": "video upload date",
  "audioEnclosingPlaylistTitle": "Audio playlist title",
  "audioDuration": "Audio duration",
  "audioRemainingDuration": "Audio listenable remaining duration",
  "audioFileSize": "Audio file size",
  "audioMusicQuality": "Music qual.",
  "audioSpokenQuality": "Spoken q.",
  "audioDownloadSpeed": "Audio downl speed",
  "audioDownloadDuration": "audio downl duration",
...
  "andSentencesTooltip": "If set, only audio containing all the listed words or sentences are selected.",
  "orSentencesTooltip": "If set, audio containing one of the listed words or sentences are selected.",
  "searchInVideoCompactDescriptionTooltip": "If set, search words or sentences are searched on video description as well.",
  "fullyListened": "Fully listened",
  "partiallyListened": "Partially listened",
  "notListened": "Not listened",
  "saveSortFilterOptionsToPlaylistDialogTitle": "Save Sort/Filter \"{sortFilterParmsName}\"",
  "saveSortFilterOptionsToPlaylist": "To playlist \"{title}\"",
  "saveButton": "Save",
  "errorInPlaylistJsonFile": "{filePathName}",
  "updatePlaylistJsonFilesMenuTooltip": "If one or several playlist directories containing or not audios were manually added or deleted in the application directory containing the playlists or if audios were manually deleted from one or several playlist directories, this functionality updates the playlist JSON files as well as the JSON file containing the application settings in order to reflect t
  "updatePlaylistPlayableAudioListTooltip": "If audios were manually deleted from the playlist directory, this functionality updates the playlist JSON file to reflect the changes in the application screen.",
  "audioPlayedInThisOrderTooltip": "Audio are played in this order. By default, the last downloaded audios are at bottom of the list.",
  "playableAudioDialogSortDescriptionTooltipBottomDownloadBefore": "Audio at bottom were downloaded before those at top.",
...
  "applyToAlreadyDownloadedAudio": "Apply to already downloaded,\nimported or converted audios",
  "applyToAlreadyDownloadedAudioTooltip": "Apply the playback speed to audios in all existing playlists. If not set, apply it only to newly downloaded, imported or converted audios (converted audios are audios created by converting text to audio).",
  "applyToAlreadyDownloadedAudioOfCurrentPlaylistTooltip": "Apply the playback speed to audios in the current playlist. If not set, apply it only to newly downloaded, imported or converted audios (converted audios are audios created by converting text to audio).",
  "applyToExistingPlaylist": "Apply to existing playlists",
  "applyToExistingPlaylistTooltip": "Apply the playback speed to all existing playlists. If not set, apply it only to newly added playlists.",
  "playlistRootpathLabel": "Playlists root path",
  "closeTextButton": "Close",
  "helpDialogTitle": "Help",
  "defaultApplicationHelpTitle": "Default Application",
  "defaultApplicationHelpContent": "If no option is selected, the defined playback speed will only apply to newly created playlists.",
  "modifyingExistingPlaylistsHelpTitle": "Modifying Existing Playlists",
  "modifyingExistingPlaylistsHelpContent": "By selecting the first checkbox, all existing playlists will be set to use the new playback speed. However, this change will only affect audio files that are downloaded after this option is enabled.",
  "alreadyDownloadedAudiosHelpTitle": "Already downloaded or imported Audio",
...
  "renameFileNameInvalid": "The audio file name \"{fileName}\" has no mp3 extension and so is invalid.",
  "renameAudioFileConfirmation": "Audio file \"{oldFileIame}.mp3\" renamed to \"{newFileName}.mp3\".",
  "renameAudioAndAssociatedFilesConfirmation": "Audio file \"{oldFileIame}.mp3\" renamed to \"{newFileName}.mp3\" {secondMessagePart}.",
  "secondMessagePartCommentOnly": "as well as comment file \"{oldFileIame}.json\" renamed to \"{newFileName}.json\"",
  "secondMessagePartPictureOnly": "as well as picture file \"{oldFileIame}.json\" renamed to \"{newFileName}.json\"",
  "secondMessagePartCommentAndPicture": "as well as comment and picture files \"{oldFileIame}.json\" renamed to \"{newFileName}.json\"",
  "forScreen": "For \"{screenName}\" screen",
  "downloadVideoUrlsFromTextFileInPlaylist": "Download URLs from Text File ...",
  "downloadVideoUrlsFromTextFileInPlaylistTooltip": "Download audios to the playlist from video URLs listed in a text file to select. The text file must contain one video URL per line.",
  "downloadAudioFromVideoUrlsInPlaylistTitle": "Download video audio to playlist \"{title}\"",
  "downloadAudioFromVideoUrlsInPlaylist": "Downloading {number} audios in selected quality.",
  "notRedownloadAudioFilesInPlaylistDirectory": "{number} audios are already contained in the target playlist \"{playlistTitle}\" directory and so were not redownloaded.",
  "clickToSetAscendingOrDescendingPlayingOrderTooltip": "Click to set ascending or descending playing order.",
...
