...
          width: kGreaterButtonWidth,
          height: kNormalButtonHeight,
          child: Tooltip(
            message: AppLocalizations.of(context)!
                .playlistToggleButtonInPlaylistDownloadViewTooltip,
            child: TextButton(
              key: const Key('playlist_toggle_button'),
              style: ButtonStyle(
                shape: getButtonRoundedShape(
                  currentTheme: themeProviderVM.currentTheme,
                ),
                padding: WidgetStateProperty.all<EdgeInsetsGeometry>(
                  const EdgeInsets.symmetric(
...
      children: [
        ConstrainedBox(
          constraints: BoxConstraints(maxWidth: kDropdownButtonMaxWidth),
          child: Tooltip(
            message: dropdownTooltipMessage,
            child: DropdownButton<String>(
              key: const Key('sort_filter_parms_dropdown_button'),
              value: dropdownValue,
              items: dropdownMenuItems,
              selectedItemBuilder: (BuildContext context) {
                return audioSortFilterParametersNamesLst.map((String name) {
                  return ConstrainedBox(
                    constraints:
...
    required PlaylistListVM playlistListVMlistenTrue,
    required WarningMessageVM warningMessageVMlistenFalse,
  }) {
    return SizedBox(
      width: kRowButtonGroupWidthSeparator,
      child: PopupMenuButton<PopupMenuButtonType>(
        key: const Key('audio_popup_menu_button'),
        enabled: playlistListVMlistenTrue.isOnePlaylistSelected,
        icon: const Icon(Icons.filter_list),
        itemBuilder: (BuildContext context) {
          return [
            PopupMenuItem<PopupMenuButtonType>(
              key: const Key('define_sort_and_filter_audio_menu_item'),
              enabled:
                  (playlistListVMlistenTrue.areButtonsApplicableToAudioEnabled),
              value: PopupMenuButtonType.openSortFilterAudioDialog,
              child: Text(
                  AppLocalizations.of(context)!.defineSortFilterAudiosMenu),
            ),
...
              value: PopupMenuButtonType.clearSortFilterAudioParmsHistory,
              child: Text(AppLocalizations.of(context)!
                  .clearSortFilterAudiosParmsHistoryMenu),
            ),
            PopupMenuItem<PopupMenuButtonType>(
              key: const Key(
                  'save_sort_and_filter_audio_parms_in_playlist_item'),
              enabled:
                  playlistListVMlistenTrue.isSaveSFparmsToPlaylistMenuEnabled(
                audioLearnAppViewType:
                    AudioLearnAppViewType.playlistDownloadView,
                translatedAppliedSortFilterParmsName:
                    AppLocalizations.of(context)!
...
