...
    return Column(
      children: [
        Row(
          children: [
            Text(AppLocalizations.of(context)!.fullyListened),
            Checkbox(
              key: const Key('filterFullyListenedCheckbox'),
              value: _filterFullyListened,
              onChanged: (bool? newValue) {
                setState(() {
                  _filterFullyListened = newValue!;
                });
              },
...
          ],
        ),
        Row(
          children: [
            Text(AppLocalizations.of(context)!.notListened),
            Checkbox(
              key: const Key('filterNotListenedCheckbox'),
              value: _filterNotListened,
              onChanged: (bool? newValue) {
                setState(() {
                  _filterNotListened = newValue!;
                });
              },
...

  Widget _buildSortingChoiceList(
    BuildContext context,
  ) {
    return SingleChildScrollView(
      child: DropdownButton<SortingOption>(
        key: const Key('sortingOptionDropdownButton'),
        isExpanded: true, // This might affect arrow visibility
        icon: Icon(Icons
            .arrow_drop_down), // Explicitly set the icon        value: SortingOption.audioDownloadDate,
        value: SortingOption.audioDownloadDate,
        onChanged: (SortingOption? newValue) {
          // situation when the user selects a sorting option
...
