...
  final List<AudioLearnAppViewType> _audioLearnAppViewTypeLst = [
    AudioLearnAppViewType.playlistDownloadView,
    AudioLearnAppViewType.audioPlayerView,
  ];

  final List<Key> _screenNavigationIconButtonKeyLst = [
    const Key('playlistDownloadViewIconButton'),
    const Key('audioPlayerViewIconButton'),
  ];

  // contains a list of widgets which build the AppBar title. Each
  // widget is specific to the screen currently displayed. This list
  // is filled in the initState() method.
  final List<Widget> _appBarTitleWidgetLst = [];
...
