import 'package:audiolearn/models/audio.dart';
import 'package:audiolearn/services/json_data_service.dart';
import 'package:audiolearn/services/settings_data_service.dart';
import 'package:audiolearn/viewmodels/audio_download_vm.dart';
import 'package:audiolearn/views/widgets/audio_sort_filter_dialog.dart';
import 'package:audiolearn/views/widgets/confirm_action_dialog.dart';
import 'package:audiolearn/views/widgets/playlist_comment_list_dialog.dart';
import 'package:audiolearn/views/widgets/playlist_add_remove_sort_filter_options_dialog.dart';
import 'package:audiolearn/views/widgets/warning_message_display_dialog.dart';
import 'package:file_picker/file_picker.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:integration_test/integration_test.dart';

import 'package:audiolearn/models/playlist.dart';
import 'package:path/path.dart' as path;
import 'package:audiolearn/constants.dart';
import 'package:audiolearn/utils/dir_util.dart';
import 'package:audiolearn/main.dart' as app;

import 'integration_test_util.dart';
import 'mock_file_picker.dart';

const int secondsDelay = 5; // 7 works, but 10 is safer and 15 solves
//                              the problems of running the integr tests
const String existingAudioDateOnlyFileNamePrefix = '230610';
final String todayDownloadDateOnlyFileNamePrefix =
    Audio.downloadDatePrefixFormatter.format(DateTime.now());
const String globalTestPlaylistId = 'PLzwWSJNcZTMRB9ILve6fEIS_OHGrV5R2o';
const String globalTestPlaylistOneAudioId =
    'PLzwWSJNcZTMRB9ILve6fEIS_OHGrV5R2o';
const String globalTestPlaylistUrl =
    'https://youtube.com/playlist?list=PLzwWSJNcZTMRB9ILve6fEIS_OHGrV5R2o';
const String globalTestPlaylistTitle =
    'audio_learn_test_download_2_small_videos';
const String globalTestPlaylistOneAudioTitle =
    'audio_learn_test_download_2_small_vid_1a';
final String globalTestPlaylistDir =
    '$kApplicationPathWindowsTest${path.separator}playlists${path.separator}$globalTestPlaylistTitle';
final String globalTestPlaylistOneAudioDir =
    '$kApplicationPathWindowsTest${path.separator}playlists${path.separator}$globalTestPlaylistOneAudioTitle';

/// This integration test contains the integration tests groups for the
/// sort/filter parms testing. The groups are included in the plalist download
/// view or in the audio player view integration test.
///
/// So, if you excute those two integration tests, you do not need to execute
/// this integration test !
Future<void> main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  await IntegrationTestUtil.setWindowsAppSizeAndPosition(isTest: true);

  playlistDownloadViewSortFilterIntegrationTest();
  audioPlayerViewSortFilterIntegrationTest();
}

void audioPlayerViewSortFilterIntegrationTest() {
  group('Sort/filter audio player view tests', () {
    testWidgets(
        '''Playing last sorted audio with filter: "Fully listened" unchecked
           and "Partially listened" checked.''', (WidgetTester tester) async {
      const String audioPlayerSelectedPlaylistTitle =
          'S8 audio'; // Youtube playlist
      const String toSelectAudioTitle =
          "3 fois où un économiste m'a ouvert les yeux (Giraud, Lefournier, Porcher)";

      await IntegrationTestUtil.initializeApplicationAndSelectPlaylist(
        tester: tester,
        savedTestDataDirName:
            'audio_player_view_sort_filter_partially_played_play_test',
        selectedPlaylistTitle: audioPlayerSelectedPlaylistTitle,
      );

      // Now we want to tap on the first downloaded audio of the
      // playlist in order to open the AudioPlayerView displaying
      // the audio

      // Tap the 'Toggle List' button to avoid displaying the list
      // of playlists which may hide the audio title we want to
      // tap on
      await tester.tap(find.byKey(const Key('playlist_toggle_button')));
      await tester.pumpAndSettle();

      // First, get the ListTile Text widget finder of the audio
      // to be selected and tap on it
      await tester.tap(find.text(toSelectAudioTitle));
      await tester.pumpAndSettle();

      // open the popup menu
      await tester.tap(find.byKey(const Key('audio_popup_menu_button')));
      await tester.pumpAndSettle();

      // find the sort/filter audio menu item and tap on it
      await tester
          .tap(find.byKey(const Key('define_sort_and_filter_audio_menu_item')));
      await tester.pumpAndSettle();

      // tap on the sort option dropdown button to display the sort
      // parameters
      await tester.tap(find.byKey(const Key('sortingOptionDropdownButton')));
      await tester.pumpAndSettle();

      // select the Audio duration sort option and tap on it to add
      // it to the sort option list
      await tester.tap(find.text('Audio duration'));
      await tester.pumpAndSettle();

      // Use the custom finder to find the first clear IconButton.
      // Then tap on it in order to suppress the Audio download
      // date sort option
      await tester
          .tap(IntegrationTestUtil.findIconButtonWithIcon(Icons.clear).at(1));
      await tester.pumpAndSettle();

      // Now tap the Fully listened checkbox in order to exclude
      // those audio from the sort/filter list
      await tester.tap(find.byKey(const Key('filterFullyListenedCheckbox')));
      await tester.pumpAndSettle();

      // Now tap the not listened checkbox in order to exclude
      // those audio from the sort/filter list
      await tester.tap(find.byKey(const Key('filterNotListenedCheckbox')));
      await tester.pumpAndSettle();

      return; // next test code no more applicable to sort/filter dialog
// TODO: complete the test
      // Now tap on the Apply button
    });

    testWidgets(
        '''Change the SF parms in in the dropdown button list to 'Title asc'
           and then verify its application. Then go to the audio player view
           and there verify that the order of the audios displayed in the
           playable audio list dialog is not sorted according to 'Title asc'
           since this SF parms was not saved in the playlist json file.

           Then, go back to the playlist download view and save the 'Title asc'
           SF parms selecting only audio player view SF parms name of the 'S8
           audio' playlist json file. Then go to the audio player view and
           there verify that the order of the audios displayed in the
           playable audio list dialog now corresponds to 'Title asc'. Since the
           Play order icon is ascending, the list is played from down to top.

           Then, click twice on |> go to end button in order to play the next
           playable audio according to the 'Title asc' order. Then reopen the
           playable audio list dialog and click on the Play order icon to
           change it from ascending to descending. This means that the displayed
           audio list corresponding to 'Title asc' SF parms will be played from
           top to down. Verify that clicking again twice on |> go to end button
           does play the correct audio.''', (WidgetTester tester) async {
      // Purge the test playlist directory if it exists so that the
      // playlist list is empty
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );

      // Copy the test initial audio data to the app dir
      DirUtil.copyFilesFromDirAndSubDirsToDirectory(
        sourceRootPath:
            "$kDownloadAppTestSavedDataDir${path.separator}sort_and_filter_audio_dialog_widget_three_playlists_test",
        destinationRootPath: kApplicationPathWindowsTest,
      );

      final SettingsDataService settingsDataService = SettingsDataService();

      // Load the settings from the json file. This is necessary
      // otherwise the ordered playlist titles will remain empty
      // and the playlist list will not be filled with the
      // playlists available in the download app test dir
      await settingsDataService.loadSettingsFromFile(
          settingsJsonPathFileName:
              "$kApplicationPathWindowsTest${path.separator}$kSettingsFileName");

      await app.main();
      await tester.pumpAndSettle(const Duration(milliseconds: 200));

      // Now tap on the current dropdown button item to open the dropdown
      // button items list

      final Finder dropDownButtonFinder =
          find.byKey(const Key('sort_filter_parms_dropdown_button'));

      final Finder dropDownButtonTextFinder = find.descendant(
        of: dropDownButtonFinder,
        matching: find.byType(Text),
      );

      await tester.tap(dropDownButtonTextFinder);
      await tester.pumpAndSettle(const Duration(milliseconds: 200));

      // And find the 'Title asc' sort/filter item
      String titleAscendingSFparmsName = 'Title asc';
      Finder titleAscDropDownTextFinder = find.text(titleAscendingSFparmsName);
      await tester.tap(titleAscDropDownTextFinder);
      await tester.pumpAndSettle();

      // And verify the order of the playlist audio titles

      List<String> audioTitlesSortedByTitleAscending = [
        "3 fois où un économiste m'a ouvert les yeux (Giraud, Lefournier, Porcher)",
        "Ce qui va vraiment sauver notre espèce par Jancovici et Barrau",
        "Jancovici m'explique l’importance des ordres de grandeur face au changement climatique",
        "La résilience insulaire par Fiona Roche",
        "La surpopulation mondiale par Jancovici et Barrau",
        "Le Secret de la RÉSILIENCE révélé par Boris Cyrulnik",
        "Les besoins artificiels par R.Keucheyan",
      ];

      IntegrationTestUtil.checkAudioOrPlaylistTitlesOrderInListTile(
        tester: tester,
        audioOrPlaylistTitlesOrderedLst: audioTitlesSortedByTitleAscending,
      );

      // Then go to the audio player view
      Finder appScreenNavigationButton =
          find.byKey(const ValueKey('audioPlayerViewIconButton'));
      await tester.tap(appScreenNavigationButton);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Now we open the AudioPlayableListDialog
      // and verify the the displayed audio titles

      await tester.tap(find
          .text("Le Secret de la RÉSILIENCE révélé par Boris Cyrulnik\n10:55"));
      await tester.pumpAndSettle();

      List<String>
          audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms = [
        "Jancovici m'explique l’importance des ordres de grandeur face au changement climatique",
        "La surpopulation mondiale par Jancovici et Barrau",
        "La résilience insulaire par Fiona Roche",
        "Le Secret de la RÉSILIENCE révélé par Boris Cyrulnik",
        "Les besoins artificiels par R.Keucheyan",
        "3 fois où un économiste m'a ouvert les yeux (Giraud, Lefournier, Porcher)",
        "Ce qui va vraiment sauver notre espèce par Jancovici et Barrau",
      ];

      IntegrationTestUtil.checkAudioTitlesOrderInListBody(
        tester: tester,
        audioTitlesOrderLst:
            audioTitlesSortedDownloadDateDescendingDefaultSortFilterParms,
      );

      // Tap on the Close button to close the AudioPlayableListDialog
      await tester.tap(find.byKey(const Key('closeTextButton')));
      await tester.pumpAndSettle();

      // Now return to the playlist download view
      appScreenNavigationButton =
          find.byKey(const ValueKey('playlistDownloadViewIconButton'));
      await tester.tap(appScreenNavigationButton);
      await tester.pumpAndSettle();

      // open the audio popup menu
      await tester.tap(find.byKey(const Key('audio_popup_menu_button')));
      await tester.pumpAndSettle();

      await tester.tap(find.byKey(
          const Key('save_sort_and_filter_audio_parms_in_playlist_item')));
      await tester.pumpAndSettle();

      // Verify that the save SF parms dialog is displayed
      expect(find.byType(PlaylistAddRemoveSortFilterOptionsDialog),
          findsOneWidget);

      // Verify the dialog title
      expect(
        find.text("Save Sort/Filter \"Title asc\""),
        findsOneWidget,
      );

      // Verify the dialog content

      expect(
        find.text("To playlist \"S8 audio\""),
        findsOneWidget,
      );

      expect(
        find.text("For \"Download Audio\" screen"),
        findsOneWidget,
      );

      expect(
        find.text("For \"Play Audio\" screen"),
        findsOneWidget,
      );

      // Select the 'For "Play Audio" screen' checkbox
      await tester.tap(find.byKey(const Key('audioPlayerViewCheckbox')));
      await tester.pumpAndSettle();

      // Finally, click on save button
      await tester.tap(
          find.byKey(const Key('saveSortFilterOptionsToPlaylistSaveButton')));
      await tester.pumpAndSettle();

      // Verify confirmation dialog
      await IntegrationTestUtil.verifyAndCloseWarningDialog(
        tester: tester,
        warningDialogMessage:
            "Sort/filter parameters \"Title asc\" were saved to playlist \"S8 audio\" for screen(s) \"Play Audio\".",
        isWarningConfirming: true,
      );

      // Verify that "Title asc" was correctly saved in the playlist
      // json file for the audio player view only.
      _verifyAudioSortFilterParmsNameStoredInPlaylistJsonFile(
        selectedPlaylistTitle: 'S8 audio',
        expectedAudioSortFilterParmsName: 'Title asc',
        audioLearnAppViewTypeLst: [AudioLearnAppViewType.audioPlayerView],
        audioPlayingOrder: AudioPlayingOrder.descending,
      );

      // Then go to the audio player view to verify that now the
      // ¨Title asc' sort/filter parms is applyed
      appScreenNavigationButton =
          find.byKey(const ValueKey('audioPlayerViewIconButton'));
      await tester.tap(appScreenNavigationButton);
      await tester.pumpAndSettle();

      // Now we open the AudioPlayableListDialog
      // and verify the the displayed audio titles

      await tester.tap(find
          .text("Le Secret de la RÉSILIENCE révélé par Boris Cyrulnik\n10:55"));
      await tester.pumpAndSettle();

      IntegrationTestUtil.checkAudioTitlesOrderInListBody(
        tester: tester,
        audioTitlesOrderLst: audioTitlesSortedByTitleAscending,
      );

      // Tap on the Close button to close the AudioPlayableListDialog
      await tester.tap(find.byKey(const Key('closeTextButton')));
      await tester.pumpAndSettle();

      // Now we tap twice on the >| button in order to start playing
      // the next audio according to the 'Title app' sort/filter parms

      await tester.tap(find.byKey(const Key('audioPlayerViewSkipToEndButton')));
      await tester.pumpAndSettle();

      await tester.tap(find.byKey(const Key('audioPlayerViewSkipToEndButton')));
      await tester.pumpAndSettle();

      // Waiting one second so that the next audio starts playing
      await Future.delayed(const Duration(seconds: 2));
      await tester.pumpAndSettle();

      // Tap on pause button to pause the audio
      await tester.tap(find.byIcon(Icons.pause));
      await tester.pumpAndSettle();

      // Verify the next audio title
      Finder nextAudioTextFinder =
          find.text("Les besoins artificiels par R.Keucheyan\n15:16");

      expect(
        nextAudioTextFinder,
        findsOneWidget,
      );

      // Re-opening again the AudioPlayableListDialog in order to
      // change the audio playing order

      await tester.tap(nextAudioTextFinder);
      await tester.pumpAndSettle();

      // And tap on the play descending order icon button in order to change
      // it to play ascending order
      await tester.tap(
          find.byKey(const Key('play_order_ascending_or_descending_button')));
      await tester.pumpAndSettle();

      // Tap on the Close button to close the AudioPlayableListDialog
      await tester.tap(find.byKey(const Key('closeTextButton')));
      await tester.pumpAndSettle();

      // Verify that the audioPlayingOrder was modified and saved in the
      // playlist
      _verifyAudioSortFilterParmsNameStoredInPlaylistJsonFile(
        selectedPlaylistTitle: 'S8 audio',
        expectedAudioSortFilterParmsName: 'Title asc',
        audioLearnAppViewTypeLst: [AudioLearnAppViewType.audioPlayerView],
        audioPlayingOrder: AudioPlayingOrder.ascending,
      );

      // Now we tap twice on the >| button in order to start playing
      // the next audio according to the 'Title app' sort/filter parms
      // now applied descendingly

      await tester.tap(find.byKey(const Key('audioPlayerViewSkipToEndButton')));
      await tester.pumpAndSettle();

      await tester.tap(find.byKey(const Key('audioPlayerViewSkipToEndButton')));
      await tester.pumpAndSettle();

      // Waiting one second so that the next audio starts playing
      await Future.delayed(const Duration(seconds: 1));
      await tester.pumpAndSettle();

      // Tap on pause button to pause the audio
      await tester.tap(find.byIcon(Icons.pause));
      await tester.pumpAndSettle();

      // Since the audio playing order was changed to 'ascending', clicking
      // twice on the >| button in order to start playing the next audio
      // selects the next playable audio which is before the now fully played
      // 'Les besoins artificiels par R.Keucheyan'
      nextAudioTextFinder =
          find.text("La surpopulation mondiale par Jancovici et Barrau\n6:06");

      expect(
        nextAudioTextFinder,
        findsOneWidget,
      );

      // Purge the test playlist directory so that the created test
      // files are not uploaded to GitHub
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );
    });
    testWidgets(
        '''Click twice on the <| go to start button in order to select the previous
           playable audio. First, save the 'Title asc' SF parms selecting only
           audio player view SF parms name of the 'S8 audio' playlist json file.
        
           Then go to the audio player view and click twice on the <| go to start
           button in order to select the previous playable audio according to the
           'Title asc' order. Then reopen the playable audio list dialog and
           click on the Play order icon to change it from ascending to descending.
           This means that the displayed audio list corresponding to 'Title asc'
           SF parms will be played from top to down. Verify that clicking once
           on <| go to start button does select the correct audio.''',
        (WidgetTester tester) async {
      // Purge the test playlist directory if it exists so that the
      // playlist list is empty
      DirUtil.deleteFilesInDirAndSubDirs(
        rootPath: kApplicationPathWindowsTest,
      );

      // Copy the test initial audio data to the app dir
      DirUtil.copyFilesFromDirAndSubDirsToDirectory(
        sourceRootPath:
            "$kDownloadAppTestSavedDataDir${path.separator}sort_and_filter_audio_dialog_widget_three_playlists_test",
        destinationRootPath: kApplicationPathWindowsTest,
      );

      final SettingsDataService settingsDataService = SettingsDataService();

      // Load the settings from the json file. This is necessary
      // otherwise the ordered playlist titles will remain empty
      // and the playlist list will not be filled with the
      // playlists available in the download app test dir
      await settingsDataService.loadSettingsFromFile(
          settingsJsonPathFileName:
              "$kApplicationPathWindowsTest${path.separator}$kSettingsFileName");

      await app.main();
      await tester.pumpAndSettle(const Duration(milliseconds: 200));

      // Now tap on the current dropdown button item to open the dropdown
      // button items list

      final Finder dropDownButtonFinder =
          find.byKey(const Key('sort_filter_parms_dropdown_button'));

      final Finder dropDownButtonTextFinder = find.descendant(
        of: dropDownButtonFinder,
        matching: find.byType(Text),
      );

      await tester.tap(dropDownButtonTextFinder);
      await tester.pumpAndSettle();

      // And find the 'Title asc' sort/filter item
      String titleAscendingSFparmsName = 'Title asc';
      Finder titleAscDropDownTextFinder = find.text(titleAscendingSFparmsName);
      await tester.tap(titleAscDropDownTextFinder);
      await tester.pumpAndSettle();

      // Now open the audio popup menu
      await tester.tap(find.byKey(const Key('audio_popup_menu_button')));
      await tester.pumpAndSettle();

      await tester.tap(find.byKey(
          const Key('save_sort_and_filter_audio_parms_in_playlist_item')));
      await tester.pumpAndSettle();

      // Select the 'For "Play Audio" screen' checkbox
      await tester.tap(find.byKey(const Key('audioPlayerViewCheckbox')));
      await tester.pumpAndSettle();

      // Finally, click on save button
      await tester.tap(
          find.byKey(const Key('saveSortFilterOptionsToPlaylistSaveButton')));
      await tester.pumpAndSettle();

      // Verify confirmation dialog
      await IntegrationTestUtil.verifyAndCloseWarningDialog(
        tester: tester,
        warningDialogMessage:
            "Sort/filter parameters \"Title asc\" were saved to playlist \"S8 audio\" for screen(s) \"Play Audio\".",
        isWarningConfirming: true,
      );

      // Then go to the audio player view
      final Finder appScreenNavigationButton =
          find.byKey(const ValueKey('audioPlayerViewIconButton'));
      await tester.tap(appScreenNavigationButton);
      await IntegrationTestUtil.pumpAndSettleDueToAudioPlayers(
        tester: tester,
      );

      // Now we tap twice on the |< button in order select the previous
      // audio according to the 'Title app' with descending audio playing order

      await tester
          .tap(find.byKey(const Key('audioPlayerViewSkipToStartButton')));
      await tester.pumpAndSettle();

      await tester
          .tap(find.byKey(const Key('audioPlayerViewSkipToStartButton')));
      await tester.pumpAndSettle();

      // Verify the next audio title
      Finder nextAudioTextFinder =
          find.text("La surpopulation mondiale par Jancovici et Barrau\n6:06");

      expect(
        nextAudioTextFinder,
        findsOneWidget,
      );

      // Opening the AudioPlayableListDialog in order to change
      // the descending audio playing order to ascending

      await tester.tap(nextAudioTextFinder);
      await tester.pumpAndSettle();

      // And tap on the play descending order icon button in order to change
      // it to play ascending order
      await tester.tap(
          find.byKey(const Key('play_order_ascending_or_descending_button')));
      await tester.pumpAndSettle();

      // Tap on the Close button to close the AudioPlayableListDialog
      await tester.tap(find.byKey(const Key('closeTextButton')));
      await tester.pumpAndSettle();

      // Verify that the audioPlayingOrder was modified and saved in the
      // playlist
      _verifyAudioSortFilterParmsNameStoredInPlaylistJsonFile(
        selectedPlaylistTitle: 'S8 audio',
        expectedAudioSortFilterParmsName: 'Title asc',
        audioLearnAppViewTypeLst: [AudioLearnAppViewType.audioPlayerView],
        audioPlayingOrder: AudioPlayingOrder.ascending,
      );

      // Now we tap once on the |< button in order select the previous
      // audio according to the 'Title app' with audio play ascending order

      await tester
          .tap(find.byKey(const Key('audioPlayerViewSkipToStartButton')));
      await tester.pumpAndSettle();

      // Since the audio playing order was changed to 'ascending', clicking
      // once on the |< button in order to select the previous audio
      // selects the previous playable audio which is before the current
      // audio 'La surpopulation mondiale par Jancovici et Barrau'
      nextAudioTextFinder = find
